selfhost/test/parser/array_error_no_rbrack.out
Error at %FILE_NAME%:1:6
Unexpected token '}', expected one of ',', ']':
  |  [1, 2}
          ^